fixed icon spacing

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -138,7 +138,7 @@ body,
   }
 
   .icon {
-    width: 18px;
+    width: 20px;
     height: 18px;
   }
 }
